--- a/A3_Website/content/post/2020-11-17-ozone_files/index.en.Rmd
+++ b/A3_Website/content/post/2020-11-17-ozone_files/index.en.Rmd
@@ -8,6 +8,7 @@ tags: []
 featured_image: '/post/2020-11-17-ozone_files/zbynek-burival-8iZG31eXkks-unsplash.jpg'
 description: 'While ozone in the stratosphere protects humans from UV light, ground-level ozone can cause chest pain, coughing, throat irritation and congestion.'
 ---
+[<<< Back: Nitrogen Dioxide](/post/2020-11-17-nitrogen-dioxide_files)  
 
 ## O3 Across the Nation
 
@@ -94,4 +95,4 @@ The data set does not include O3 by source as O3 is not directly produced
 by humans. Rather, nitrous oxides and volatile organic compounds produced
 by humans react together to create O3.
 
-[>>> Next: Carbon Monoxide](/post/2020-11-19-carbon-monoxide_files)
+[>>> Next: Carbon Monoxide](/post/2020-11-19-carbon-monoxide_files)   
