--- a/A3_Website/content/post/2020-11-22-postlude_files/index.en.Rmd
+++ b/A3_Website/content/post/2020-11-22-postlude_files/index.en.Rmd
@@ -1,7 +1,7 @@
 ---
 title: Postlude
 author: ''
-date: '2020-11-22'
+date: '2020-11-19'
 slug: []
 categories: []
 tags: []
@@ -17,4 +17,7 @@ For policy makers and government officials, the insights should provide enough
 information on the 'where' and 'how' concerning air pollution trends, in hope
 for action and cleaner air. For everyday citizens (American or otherwise), 
 hopefully you've learnt a little bit more about pollution. Remember, even the 
-simplest things like taking a bus instead of a car can help everyone!
+simplest things like taking a bus instead of a car can help everyone breath a
+little easier!
+
+[<<< Back: Sulfur Dioxide](/post/2020-11-19-sulfur-dioxide_files)
